[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Textures/GUI/MenuIcon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/GUI/TopBar.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/GUI/RawMaterialsTopBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Textures/GUI/RoundRect1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/TopBarResourceFont.tres" type="DynamicFont" id=5]

[node name="TopBar" type="Control"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 60 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.913725, 0.866667, 0.686275, 0 )

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 1274.0
margin_bottom = 54.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="RawMaterials" parent="ColorRect/MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_right = 586.0
size_flags_horizontal = 1

[node name="CityActions" type="HBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer"]
margin_left = 596.0
margin_right = 884.0
margin_bottom = 48.0

[node name="ProductionButton" type="TextureButton" parent="ColorRect/MarginContainer/HBoxContainer/CityActions"]
margin_right = 142.0
margin_bottom = 48.0
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/CityActions/ProductionButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Granjas"
align = 1
valign = 1

[node name="TroopsButton" type="TextureButton" parent="ColorRect/MarginContainer/HBoxContainer/CityActions"]
margin_left = 146.0
margin_right = 288.0
margin_bottom = 48.0
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/CityActions/TroopsButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Ejercito"
align = 1
valign = 1

[node name="BattleReports" type="HBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer"]
margin_left = 894.0
margin_right = 1044.0
margin_bottom = 48.0
size_flags_horizontal = 7

[node name="ReportsButton" type="TextureButton" parent="ColorRect/MarginContainer/HBoxContainer/BattleReports"]
margin_right = 142.0
margin_bottom = 48.0
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/BattleReports/ReportsButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Reportes"
align = 1
valign = 1

[node name="EnemyActions" type="HBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer"]
margin_left = 1054.0
margin_right = 1204.0
margin_bottom = 48.0
size_flags_horizontal = 7

[node name="AttackButton" type="TextureButton" parent="ColorRect/MarginContainer/HBoxContainer/EnemyActions"]
margin_right = 142.0
margin_bottom = 48.0
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/EnemyActions/AttackButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Atacar"
align = 1
valign = 1

[node name="MenuButton" type="TextureButton" parent="ColorRect/MarginContainer/HBoxContainer"]
margin_left = 1214.0
margin_right = 1268.0
margin_bottom = 48.0
size_flags_horizontal = 8
texture_normal = ExtResource( 1 )

[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/CityActions/ProductionButton" to="." method="_on_ProductionButton_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/CityActions/TroopsButton" to="." method="_on_TroopsButton_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/BattleReports/ReportsButton" to="." method="_on_ReportsButton_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/EnemyActions/AttackButton" to="." method="_on_AttackButton_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
